--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,69 @@
-absl-py==0.11.0
+absl-py==3.2.1
 astunparse==1.6.3
+attrs==25.3.0
 cachetools==4.2.0
-certifi==2020.12.5
+certifi==2025.1.31
 chardet==4.0.0
+charset-normalizer==3.4.3
 cloudpickle==1.6.0
-cycler==0.10.0
-decorator==4.4.2
-dm-tree==0.1.5
+contourpy==1.3.3
+cycler==0.12.1
+decorator==5.2.1
+dm-tree==0.1.9
+flatbuffers==25.2.10
+fonttools==4.59.1
 future==0.18.2
-gast==0.3.3
+gast==0.6.0
 google-auth==1.24.0
 google-auth-oauthlib==0.4.2
 google-pasta==0.2.0
-grpcio==1.34.1
-gym==0.21.0
-h5py==2.10.0
-idna==2.10
+grpcio==1.71.0
+gym==0.26.2
+gym-notices==0.1.0
+h5py==3.13.0
+idna==3.1
+keras==3.9.1
 Keras-Preprocessing==1.1.2
-kiwisolver==1.3.1
-Markdown==3.3.3
-matplotlib==3.3.3
-numpy==1.18.5
+kiwisolver==1.4.8
+libclang==18.1.1
+Markdown==3.7
+markdown-it-py==4.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.1
+mdurl==0.1.2
+ml_dtypes==0.5.3
+namex==0.1.0
+numpy==2.1.2
 oauthlib==3.1.0
 opt-einsum==3.3.0
-Pillow==7.2.0
-protobuf==3.14.0
+optree==0.17.0
+packaging==25.0
+pillow==10.4.0
+protobuf==5.29.5
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyglet==1.5.11
-pyparsing==2.4.7
-python-dateutil==2.8.1
-requests==2.25.1
+Pygments==2.19.2
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+requests==2.32.3
 requests-oauthlib==1.3.0
+rich==14.1.0
 rsa==4.7
-scipy==1.5.4
-six==1.15.0
-tensorboard==2.4.1
+scipy==1.15.2
+six==1.17.0
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
 tensorboard-plugin-wit==1.7.0
-tensorflow==2.3.1
-tensorflow-addons==0.12.0
-tensorflow-estimator==2.3.0
-tensorflow-probability==0.11.1
-termcolor==1.1.0
+tensorflow==2.19.0
+tensorflow-addons==0.23.0
+tensorflow-estimator==2.15.0
+tensorflow-io-gcs-filesystem==0.37.1
+tensorflow-probability==0.25.0
+termcolor==3.1.0
+tf_keras==2.19.0
 typeguard==2.10.0
-urllib3==1.26.2
-Werkzeug==1.0.1
-wrapt==1.12.1
+typing_extensions==4.14.1
+urllib3==2.3.0
+Werkzeug==3.1.3
+wrapt==1.17.2
